[gd_scene load_steps=7 format=3 uid="uid://o7kjrn46nqd"]

[ext_resource type="Script" path="res://enemies/purple/purple2.gd" id="1_7ohsw"]

[sub_resource type="Gradient" id="Gradient_bu8hp"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_2l3fj"]
radius = 796.049

[sub_resource type="CircleShape2D" id="CircleShape2D_wt1ba"]
radius = 37.0259

[sub_resource type="CircleShape2D" id="CircleShape2D_aqbt7"]
radius = 110.114

[sub_resource type="CircleShape2D" id="CircleShape2D_kdq7s"]
radius = 109.115

[node name="purple2" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_7ohsw")

[node name="body" type="CPUParticles2D" parent="."]
scale = Vector2(3, 3)
amount = 75
speed_scale = 1.5
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -360.0
angle_max = 360.0
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(0.372549, 0, 1, 1)
color_ramp = SubResource("Gradient_bu8hp")

[node name="player_detection" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
visible = false
shape = SubResource("CircleShape2D_2l3fj")

[node name="playerdeath" type="Area2D" parent="." groups=["enemy", "enemy_body"]]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdeath"]
visible = false
shape = SubResource("CircleShape2D_wt1ba")

[node name="hurts_player" type="Area2D" parent="." groups=["enemy_attack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurts_player"]
visible = false
shape = SubResource("CircleShape2D_aqbt7")

[node name="eye_bottom" type="CPUParticles2D" parent="."]
position = Vector2(0, 60)
amount = 80
explosiveness = 0.9
local_coords = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 15.0
scale_amount_max = 15.0

[node name="eye_top" type="CPUParticles2D" parent="."]
position = Vector2(0, -60)
amount = 80
explosiveness = 0.9
local_coords = true
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 15.0
scale_amount_max = 15.0

[node name="wall_hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_kdq7s")

[node name="Stunned" type="Timer" parent="."]
wait_time = 0.75

[connection signal="area_entered" from="player_detection" to="." method="_on_player_detection_area_entered"]
[connection signal="area_exited" from="player_detection" to="." method="_on_player_detection_area_exited"]
[connection signal="area_entered" from="playerdeath" to="." method="_on_playerdeath_area_entered"]
[connection signal="area_entered" from="hurts_player" to="." method="_on_hurts_player_area_entered"]
[connection signal="area_exited" from="hurts_player" to="." method="_on_hurts_player_area_exited"]
[connection signal="timeout" from="Stunned" to="." method="_on_stunned_timeout"]
